--- a/bmicalculator.kv
+++ b/bmicalculator.kv
@@ -56,10 +56,14 @@ WindowManager:
             MDTextField:
                 #max_text_length: 4
                 input_filter: "int"
+                input_type: "number"
                 disabled: root.height_1_bool
                 id: height_1
                 on_text: root.calculate_bmi()
-
+                #on_touch_down: print('touch down') #root.clear_height_text_1()
+                #on_text: print('test')
+                #on_focus: print('focused')
+                on_touch_down: if self.collide_point(*args[1].pos): self.text = ""
 
             MDLabel:
                 text: root.height_units_1
@@ -69,6 +73,9 @@ WindowManager:
                 input_filter: "int"
                 id: height_2
                 on_text: root.calculate_bmi()
+                on_touch_down: if self.collide_point(*args[1].pos): self.text = ""
+
+
 
 
 
@@ -93,6 +100,9 @@ WindowManager:
                 input_filter: "int"
                 id: weight
                 on_text: root.calculate_bmi()
+                on_touch_down: if self.collide_point(*args[1].pos): self.text = ""
+
+
 
             MDLabel:
                 text: root.weight_units
