--- a/bmicalculator.kv
+++ b/bmicalculator.kv
@@ -56,7 +56,7 @@ WindowManager:
             MDTextField:
                 #max_text_length: 4
                 input_filter: "int"
-                input_type: "number"
+                input_type: 'number'
                 disabled: root.height_1_bool
                 id: height_1
                 on_text: root.calculate_bmi()
