change to textinput

--- a/bmicalculator.kv
+++ b/bmicalculator.kv
@@ -53,7 +53,7 @@ WindowManager:
             MDLabel:
                 text: "Height"
 
-            MDTextField:
+            TextInput:
                 #max_text_length: 4
                 input_filter: "int"
                 input_type: 'number'
