--- a/bmicalculator.kv
+++ b/bmicalculator.kv
@@ -4,6 +4,7 @@ WindowManager:
 
 #BMICalculator:
 <MainScreen>
+
     BoxLayout:
         orientation: "vertical"
         #size_hint: 1, 1
@@ -53,10 +54,10 @@ WindowManager:
             MDLabel:
                 text: "Height"
 
-            TextInput:
+            NumericInput:
                 #max_text_length: 4
                 input_filter: "int"
-                input_type: 'number'
+                input_type: "number"
                 disabled: root.height_1_bool
                 id: height_1
                 on_text: root.calculate_bmi()
@@ -65,6 +66,11 @@ WindowManager:
                 #on_focus: print('focused')
                 on_touch_down: if self.collide_point(*args[1].pos): self.text = ""
                 multiline: False
+                #on_focus: root.set_layout(keyboard_anchor, self)
+
+
+
+
 
             MDLabel:
                 text: root.height_units_1
@@ -107,6 +113,10 @@ WindowManager:
 
             MDLabel:
                 text: root.weight_units
+            RelativeLayout:
+                id: keyboard_anchor
+                size_hint_y: 0.5
+                pos: .5, .5
 
         BoxLayout:
             size_hint: 1, .1
