--- a/bmicalculator.kv
+++ b/bmicalculator.kv
@@ -54,7 +54,7 @@ WindowManager:
             MDLabel:
                 text: "Height"
 
-            NumericInput:
+            CustomTextField:
                 #max_text_length: 4
                 input_filter: "int"
                 input_type: "number"
