--- a/bmicalculator.kv
+++ b/bmicalculator.kv
@@ -54,9 +54,9 @@ WindowManager:
             MDLabel:
                 text: "Height"
 
-            Calc:
+            NumericInput:
                 #max_text_length: 4
-                input_filter: "int"
+                input_filter: "float"
                 input_type: "number"
                 disabled: root.height_1_bool
                 id: height_1
@@ -66,7 +66,7 @@ WindowManager:
                 #on_focus: print('focused')
                 on_touch_down: if self.collide_point(*args[1].pos): self.text = ""
                 multiline: False
-                on_focus: self.setup_keyboard()
+                #on_focus: self.setup_keyboard()
 
 
 
