--- a/bmicalculator.kv
+++ b/bmicalculator.kv
@@ -1,9 +1,20 @@
 WindowManager:
     MainScreen:
 
+# pointer widget
+<Pointer>
+    size_hint : None, None
+    size : 42, 15
+    canvas:
+        Color:
+            rgba: 0, 0, 0, 1
+        Rectangle:
+            pos: self.pos
+            size: self.size
 
 #BMICalculator:
-
+#: set a .3
+#: set b .15
 
 <MainScreen>
 
@@ -13,7 +24,7 @@ WindowManager:
 
         BoxLayout:
             orientation: "horizontal"
-            size_hint: 1, .2
+            size_hint: 1, .15
             #pos_hint: {"top": 1, "x":1}
             canvas.before:
                 Color:
@@ -39,11 +50,26 @@ WindowManager:
                 on_press: root.metric_button()
                 #on_press: print('here') , self.state = "down"
 
+            #ToggleButton:
+            #    text: "adult"
+            #    group: "age"
+            #    state: "down"
+            #    size_hint: .5, .5
+            #    allow_no_selection: False
+            #    on_press: root.imperial_button()
+
+            #ToggleButton:
+            #    text: "child"
+            #    group: "age"
+            #    size_hint: .5, .5
+            #    allow_no_selection: False
+            #    on_press: root.metric_button()
+
 
 
 
         BoxLayout:
-            size_hint: 1, .2
+            size_hint: 1, .1
         #    pos_hint: {"top": .8, "x":1}
             canvas.before:
                 Color:
@@ -56,19 +82,25 @@ WindowManager:
             MDLabel:
                 text: "Height"
 
-            TextInput:
+            ToggleButton:
                 #max_text_length: 4
-                input_filter: "float"
-                input_type: "number"
+                #input_filter: "float"
+                #input_type: "number"
                 disabled: root.height_1_bool
                 id: height_1
-                on_text: root.calculate_bmi()
+                allow_no_selection: False
+                state: "down"
+                #on_text: root.calculate_bmi()
                 #on_touch_down: print('touch down') #root.clear_height_text_1()
                 #on_text: print('test')
                 #on_focus: print('focused')
                 on_touch_down: if self.collide_point(*args[1].pos): self.text = ""
-                multiline: False
+                #multiline: False
                 #on_focus: root.text_focused()
+                text: 'test'
+                group: "text_button"
+                text: ""
+                on_press: root.height_1_button()
 
 
 
@@ -78,13 +110,16 @@ WindowManager:
             MDLabel:
                 text: root.height_units_1
 
-            MDTextField:
+            ToggleButton:
                 #max_text_length: 4
-                input_filter: "int"
+                #input_filter: "int"
                 id: height_2
-                on_text: root.calculate_bmi()
+                #on_text: root.calculate_bmi()
                 on_touch_down: if self.collide_point(*args[1].pos): self.text = ""
-
+                group: "text_button"
+                allow_no_selection: False
+                text: ""
+                on_press: root.height_2_button()
 
 
 
@@ -93,7 +128,7 @@ WindowManager:
                 text: root.height_units_2
 
         BoxLayout:
-            size_hint: 1, .2
+            size_hint: 1, .1
         #    pos_hint: {"top": .8, "x":1}
             canvas.before:
                 Color:
@@ -105,13 +140,16 @@ WindowManager:
             MDLabel:
                 text: "Weight"
 
-            MDTextField:
+            ToggleButton:
                 #max_text_length: 4
-                input_filter: "int"
+                #input_filter: "int"
                 id: weight
-                on_text: root.calculate_bmi()
+                #on_text: root.calculate_bmi()
                 on_touch_down: if self.collide_point(*args[1].pos): self.text = ""
-
+                group: "text_button"
+                allow_no_selection: False
+                text: ""
+                on_press: root.weight_button()
 
 
             MDLabel:
@@ -121,42 +159,26 @@ WindowManager:
                 size_hint_y: 0.5
                 pos: .5, .5
 
+
         BoxLayout:
-            size_hint: 1, .1
+            size_hint: 1, .2
         #    pos_hint: {"top": .8, "x":1}
             canvas.before:
                 Color:
-                    rgb: .5, 1, .5, 1
+                    rgb: 1, 1, .5, 1
                 Rectangle:
-                    size: self.size
-                    pos: self.pos
-
-            #MDRaisedButton:
-            #    text: "Caclulate BMI"
-            #    on_press: root.calculate_bmi()
-
-            MDLabel:
-                text: root.display_bmi
-                #pos_hint: {"x": .5}
-
-
-
-
-        BoxLayout:
-            size_hint: 1, .3
-        #    pos_hint: {"top": .8, "x":1}
-            canvas.before:
-                Color:
-                    rgb: .5, .5, .5, 1
-                Rectangle:
-                    size: self.size
-                    pos: self.pos
+                    size: self.size # self.width * .8, self.height * .5
+                    pos: self.pos # self.width*.1, root.height*(a+b) + self.height*.25
+                    # I need to add the heights of the other two box layouts underneath
+                    # so in this case I have .45 because of .3 + .15
 
                 Color:
                     rgb: 1, 1, 1, 1
                 Rectangle:
                     size: self.width * .8, self.height * .5
-                    pos: self.width*.1, self.height*.25
+                    pos: self.width*.1, self.height*.25 +  root.height*(a+b)
+
+
 
                 # I will have values of bmi from 14 to 44
 
@@ -165,39 +187,130 @@ WindowManager:
                     rgb: 51/255, 233/255, 253/255, 1
                 Rectangle:
                     size: (self.width * .8) * (4.5 / 30), self.height * .5
-                    pos: self.width*.1, self.height*.25
+                    pos: self.width*.1, self.height*.25 + root.height*(a+b)
 
                 # 18.5 - 25 is healthy green.
                 Color:
                     rgb: 0, 1, 0, 1
                 Rectangle:
                     size: (self.width * .8) * (7.5 / 30), self.height * .5
-                    pos: self.width*.1 + (self.width * .8) * (4.5 / 30), self.height*.25
+                    pos: self.width*.1 + (self.width * .8) * (4.5 / 30), self.height*.25 + + root.height*(a+b)
+
 
                 # 25 - 30 is overweight yellow.
                 Color:
                     rgb: 240/255, 253/255, 51/255, 1
                 Rectangle:
                     size: (self.width * .8) * (5 / 30), self.height * .5
-                    pos: self.width*.1 + (self.width * .8) * (12 / 30), self.height*.25
+                    pos: self.width*.1 + (self.width * .8) * (12 / 30), self.height*.25 + + root.height*(a+b)
+
 
                 # 30-35 is obese orange. class 1
                 Color:
                     rgb: 229/255, 132/255, 20/255, 1
                 Rectangle:
                     size: (self.width * .8) * (5 / 30), self.height * .5
-                    pos: self.width*.1 + (self.width * .8) * (17 / 30), self.height*.25
+                    pos: self.width*.1 + (self.width * .8) * (17 / 30), self.height*.25 + + root.height*(a+b)
+
 
                 # 35-40 is obese class 2 dark orange.
                 Color:
                     rgb: 229/255, 69/255, 20/255, 1
                 Rectangle:
                     size: (self.width * .8) * (5 / 30), self.height * .5
-                    pos: self.width*.1 + (self.width * .8) * (22 / 30), self.height*.25
+                    pos: self.width*.1 + (self.width * .8) * (22 / 30), self.height*.25 + + root.height*(a+b)
+
 
                 # 40 - 44 is obese class 3 dark red.
                 Color:
                     rgb: 1, 0, 0, 1
                 Rectangle:
                     size: (self.width * .8) * (4 / 30), self.height * .5
-                    pos: self.width*.1 + (self.width * .8) * (27 / 30), self.height*.25
+                    pos: self.width*.1 + (self.width * .8) * (27 / 30), self.height*.25 + + root.height*(a+b)
+
+                # the pointer
+                # the pointer has to be last to make sure that it is not covered
+                Color:
+                    rgb: 0, 0, 0, 1
+                Rectangle:
+                    size: (self.width * .005), self.height * .6
+                    pos: self.width*.1 + root.pointer_x, self.height*.25 +  root.height*(a+b)
+
+
+
+        GridLayout:
+            size_hint: 1, a
+            # for the calculator part
+            cols: 3
+            rows: 4
+
+            Button:
+                text: "1"
+                on_press: root.calculate_bmi()
+                on_press: root.add(1)
+            Button:
+                text: "2"
+                on_press: root.calculate_bmi()
+                on_press: root.add(2)
+
+            Button:
+                text: "3"
+                on_press: root.calculate_bmi()
+                on_press: root.add(3)
+
+            Button:
+                text: "4"
+                on_press: root.calculate_bmi()
+                on_press: root.add(4)
+
+            Button:
+                text: "5"
+                on_press: root.calculate_bmi()
+                on_press: root.add(5)
+
+            Button:
+                text: "6"
+                on_press: root.calculate_bmi()
+                on_press: root.add(6)
+
+            Button:
+                text: "7"
+                on_press: root.calculate_bmi()
+                on_press: root.add(7)
+
+            Button:
+                text: "8"
+                on_press: root.calculate_bmi()
+                on_press: root.add(8)
+
+            Button:
+                text: "9"
+                on_press: root.calculate_bmi()
+                on_press: root.add(9)
+
+            Button:
+                text: "."
+                on_press: root.calculate_bmi()
+                on_press: root.add(".")
+
+            Button:
+                text: "0"
+                on_press: root.calculate_bmi()
+                on_press: root.add(0)
+
+            Button:
+                text: "back"
+
+
+
+
+        BoxLayout:
+            # for a banner ad at the bottom
+            size_hint: 1, b
+        #    pos_hint: {"top": .8, "x":1}
+            canvas.before:
+                Color:
+                    rgb: 0, .5, .5, 1
+                Rectangle:
+                    size: self.size
+                    pos: self.pos
