--- a/bmicalculator.kv
+++ b/bmicalculator.kv
@@ -15,6 +15,7 @@ WindowManager:
 #BMICalculator:
 #: set a .3
 #: set b .15
+#: set c .1
 
 <MainScreen>
 
@@ -25,30 +26,44 @@ WindowManager:
         BoxLayout:
             orientation: "horizontal"
             size_hint: 1, .15
+            padding: [20, 0, 20, 0]
+            spacing: 50
+
             #pos_hint: {"top": 1, "x":1}
             canvas.before:
                 Color:
-                    rgb: 0, 1, 1, 1
+                    rgb: 43/255, 43/255, 43/255, 1
                 Rectangle:
                     size: self.size
                     pos: self.pos
 
 
             ToggleButton:
-                text: "ft + in"
+                text: "Imperial"
                 group: "units button"
                 state: "down"
-                size_hint: .5, .5
+                size_hint: .15, .3
+                pos_hint: {"top": .65}
                 allow_no_selection: False
                 on_press: root.imperial_button()
+                background_normal: 'unpressed_button.png'
+                background_down: 'pressed_button.png'
+                font_size: (20)
+                font_name: 'SF-UI-Text-Regular.otf'
+                id: imperial_button
 
             ToggleButton:
-                text: "cm"
+                text: "Metric"
                 group: "units button"
-                size_hint: .5, .5
+                size_hint: .15, .3
+                pos_hint: {"top": .65}
                 allow_no_selection: False
                 on_press: root.metric_button()
-                #on_press: print('here') , self.state = "down"
+                background_normal: 'unpressed_button.png'
+                background_down: 'pressed_button.png'
+                #background_down: ''
+                font_size: (20)
+                font_name: 'SF-UI-Text-Regular.otf'
 
             #ToggleButton:
             #    text: "adult"
@@ -70,17 +85,22 @@ WindowManager:
 
         BoxLayout:
             size_hint: 1, .1
-        #    pos_hint: {"top": .8, "x":1}
+
+            padding: [5,5,5,5]
             canvas.before:
                 Color:
-                    rgb: 1, 0, 1, 1
+                    rgb: 43/255, 43/255, 43/255, 1
                 Rectangle:
                     size: self.size
                     pos: self.pos
 
 
-            MDLabel:
+            Label:
                 text: "Height"
+                font_size: (21)
+                font_name: 'SF-UI-Text-Regular.otf'
+                color: 1, 1, 1, 1
+                pos_hint: {'x':0}
 
             ToggleButton:
                 #max_text_length: 4
@@ -101,14 +121,25 @@ WindowManager:
                 group: "text_button"
                 text: ""
                 on_press: root.height_1_button()
+                background_normal: 'unpressed_label.png'
+                background_down: 'pressed_label.png'
+                font_size: (23.5)
+                font_name: 'SF-UI-Text-Regular.otf'
+                color: 0, 0, 0, 1
+                size_hint: 1, .65
+                pos_hint: {"center_y": .5}
 
 
 
 
 
 
-            MDLabel:
+            Label:
                 text: root.height_units_1
+                font_size: (22)
+                font_name: 'SF-UI-Text-Regular.otf'
+                color: 1, 1, 1, 1
+                pos_hint: {'center_x': 1}
 
             ToggleButton:
                 #max_text_length: 4
@@ -120,25 +151,39 @@ WindowManager:
                 allow_no_selection: False
                 text: ""
                 on_press: root.height_2_button()
+                background_normal: 'unpressed_label.png'
+                background_down: 'pressed_label.png'
+                font_size: (23.5)
+                font_name: 'SF-UI-Text-Regular.otf'
+                color: 0, 0, 0, 1
+                size_hint: 1, .65
+                pos_hint: {"center_y": .5}
 
 
 
 
-            MDLabel:
+
+            Label:
                 text: root.height_units_2
+                font_size: (23.5)
+                font_name: 'SF-UI-Text-Regular.otf'
+                color: 1, 1, 1, 1
 
         BoxLayout:
             size_hint: 1, .1
         #    pos_hint: {"top": .8, "x":1}
             canvas.before:
                 Color:
-                    rgb: 1, 1, 0, 1
+                    rgb: 43/255, 43/255, 43/255, 1
                 Rectangle:
                     size: self.size
                     pos: self.pos
 
-            MDLabel:
+            Label:
                 text: "Weight"
+                font_size: (22)
+                font_name: 'SF-UI-Text-Regular.otf'
+                color: 1, 1, 1, 1
 
             ToggleButton:
                 #max_text_length: 4
@@ -150,22 +195,28 @@ WindowManager:
                 allow_no_selection: False
                 text: ""
                 on_press: root.weight_button()
+                background_normal: 'unpressed_label.png'
+                background_down: 'pressed_label.png'
+                font_size: (23.5)
+                font_name: 'SF-UI-Text-Regular.otf'
+                color: 0, 0, 0, 1
+                size_hint: 1, .65
+                pos_hint: {"center_y": .5}
 
 
-            MDLabel:
+
+            Label:
                 text: root.weight_units
-            RelativeLayout:
-                id: keyboard_anchor
-                size_hint_y: 0.5
-                pos: .5, .5
-
+                font_size: (22)
+                font_name: 'SF-UI-Text-Regular.otf'
+                color: 1, 1, 1, 1
 
         BoxLayout:
-            size_hint: 1, .2
+            size_hint: 1, .1
         #    pos_hint: {"top": .8, "x":1}
             canvas.before:
                 Color:
-                    rgb: 1, 1, .5, 1
+                    rgb: 43/255, 43/255, 43/255, 1
                 Rectangle:
                     size: self.size # self.width * .8, self.height * .5
                     pos: self.pos # self.width*.1, root.height*(a+b) + self.height*.25
@@ -176,57 +227,57 @@ WindowManager:
                     rgb: 1, 1, 1, 1
                 Rectangle:
                     size: self.width * .8, self.height * .5
-                    pos: self.width*.1, self.height*.25 +  root.height*(a+b)
+                    pos: self.width*.1, self.height*.25 +  root.height*(a+b+c)
 
 
 
                 # I will have values of bmi from 14 to 44
 
-                # 14 - 18.5 is underweight red.
+                # 14 - 18.5 is underweight blue.
                 Color:
-                    rgb: 51/255, 233/255, 253/255, 1
+                    rgb: 147/255, 207/255, 224/255, 1
                 Rectangle:
                     size: (self.width * .8) * (4.5 / 30), self.height * .5
-                    pos: self.width*.1, self.height*.25 + root.height*(a+b)
+                    pos: self.width*.1, self.height*.25 + root.height*(a+b+c)
 
                 # 18.5 - 25 is healthy green.
                 Color:
-                    rgb: 0, 1, 0, 1
+                    rgb: 131/255, 186/255, 61/255, 1 # 116/255, 178/255, 36/255, 1
                 Rectangle:
-                    size: (self.width * .8) * (7.5 / 30), self.height * .5
-                    pos: self.width*.1 + (self.width * .8) * (4.5 / 30), self.height*.25 + + root.height*(a+b)
+                    size: (self.width * .8) * (6.5 / 30), self.height * .5
+                    pos: self.width*.1 + (self.width * .8) * (4.5 / 30), self.height*.25 + + root.height*(a+b+c)
 
 
                 # 25 - 30 is overweight yellow.
                 Color:
-                    rgb: 240/255, 253/255, 51/255, 1
+                    rgb: 231/255, 223/255, 84/255, 1
                 Rectangle:
                     size: (self.width * .8) * (5 / 30), self.height * .5
-                    pos: self.width*.1 + (self.width * .8) * (12 / 30), self.height*.25 + + root.height*(a+b)
+                    pos: self.width*.1 + (self.width * .8) * (11 / 30), self.height*.25 + + root.height*(a+b+c)
 
 
                 # 30-35 is obese orange. class 1
                 Color:
-                    rgb: 229/255, 132/255, 20/255, 1
+                    rgb: 243/255, 179/255, 63/255, 1
                 Rectangle:
                     size: (self.width * .8) * (5 / 30), self.height * .5
-                    pos: self.width*.1 + (self.width * .8) * (17 / 30), self.height*.25 + + root.height*(a+b)
+                    pos: self.width*.1 + (self.width * .8) * (16 / 30), self.height*.25 + + root.height*(a+b+c)
 
 
                 # 35-40 is obese class 2 dark orange.
                 Color:
-                    rgb: 229/255, 69/255, 20/255, 1
+                    rgb: 243/255, 136/255, 64/255, 1
                 Rectangle:
                     size: (self.width * .8) * (5 / 30), self.height * .5
-                    pos: self.width*.1 + (self.width * .8) * (22 / 30), self.height*.25 + + root.height*(a+b)
+                    pos: self.width*.1 + (self.width * .8) * (21 / 30), self.height*.25 + + root.height*(a+b+c)
 
 
                 # 40 - 44 is obese class 3 dark red.
                 Color:
-                    rgb: 1, 0, 0, 1
+                    rgb: 243/255, 93/255, 64/255, 1
                 Rectangle:
                     size: (self.width * .8) * (4 / 30), self.height * .5
-                    pos: self.width*.1 + (self.width * .8) * (27 / 30), self.height*.25 + + root.height*(a+b)
+                    pos: self.width*.1 + (self.width * .8) * (26 / 30), self.height*.25 + + root.height*(a+b+c)
 
                 # the pointer
                 # the pointer has to be last to make sure that it is not covered
@@ -234,72 +285,214 @@ WindowManager:
                     rgb: 0, 0, 0, 1
                 Rectangle:
                     size: (self.width * .005), self.height * .6
-                    pos: self.width*.1 + root.pointer_x, self.height*.25 +  root.height*(a+b)
+                    pos: self.width*.1 + root.pointer_x - (self.width * .005)/2, self.height*.25 +  root.height*(a+b+c)
+
+                #Color:
+                #    rgb: 0, 0, 0, 1
+                #Rectangle:
+                #    size: (self.width * .005), self.height * .6
+                #    pos: self.width*.1 + root.pointer_x + 2 - (self.width * .005)/2, self.height*.25 +  root.height*(a+b+c)
 
 
+        BoxLayout:
+            orientation: "vertical"
+            size_hint: 1, c
+            BoxLayout:
+                padding: [5, 5, 5, 5]
+                canvas.before:
+                    Color:
+                        rgb: 43/255, 43/255, 43/255, 1
+                    Rectangle:
+                        size: self.size
+                        pos: self.pos
+                Label:
+                    text: "BMI : " + root.display_bmi_final
+                    font_size: root.display_font_size
+                    font_name: 'SF-UI-Text-Regular.otf'
+                    color: 1, 1, 1, 1
+                Label:
+                    text: root.display_bmi_category
+                    font_size: root.display_font_size
+                    font_name: 'SF-UI-Text-Regular.otf'
+                    color: 1, 1, 1, 1
+            BoxLayout:
+                padding: [self.width*.25,0,self.width*.25,0]
+                canvas.before:
+                    Color:
+                        rgb: 43/255, 43/255, 43/255, 1
+                    Rectangle:
+                        size: self.size
+                        pos: self.pos
+                Button:
+                    text: "Show Ranges"
+                    on_press: root.show_ranges()
+                    background_color: 107/255, 107/255, 107/255, 1
+                    background_normal: ''
+                    background_down: ''
+                    on_press: self.background_color = (70/255, 70/255, 70/255, 1)
+                    on_release: self.background_color = (107/255, 107/255, 107/255, 1)
+                    font_size: (15)
+                    font_name: 'SF-UI-Text-Regular.otf'
+                    #size_hint: 1, 1
 
         GridLayout:
             size_hint: 1, a
             # for the calculator part
             cols: 3
             rows: 4
+            padding: [5,5,5,5]
+            spacing: [2.5, 2.5]
+
+            canvas.before:
+                Color:
+                    rgb: 43/255, 43/255, 43/255, 1
+                Rectangle:
+                    size: self.size
+                    pos: self.pos
 
             Button:
                 text: "1"
                 on_press: root.calculate_bmi()
                 on_press: root.add(1)
+                background_color: 107/255, 107/255, 107/255, 1
+                background_normal: ''
+                background_down: ''
+                on_press: self.background_color = (70/255, 70/255, 70/255, 1)
+                on_release: self.background_color = (107/255, 107/255, 107/255, 1)
+                font_size: (23.5)
+                font_name: 'SF-UI-Text-Regular.otf'
+
             Button:
                 text: "2"
                 on_press: root.calculate_bmi()
                 on_press: root.add(2)
+                background_color: 107/255, 107/255, 107/255, 1
+                background_normal: ''
+                background_down: ''
+                on_press: self.background_color = (70/255, 70/255, 70/255, 1)
+                on_release: self.background_color = (107/255, 107/255, 107/255, 1)
+                font_size: (23.5)
+                font_name: 'SF-UI-Text-Regular.otf'
 
             Button:
                 text: "3"
                 on_press: root.calculate_bmi()
                 on_press: root.add(3)
+                background_color: 107/255, 107/255, 107/255, 1
+                background_normal: ''
+                background_down: ''
+                on_press: self.background_color = (70/255, 70/255, 70/255, 1)
+                on_release: self.background_color = (107/255, 107/255, 107/255, 1)
+                font_size: (23.5)
+                font_name: 'SF-UI-Text-Regular.otf'
 
             Button:
                 text: "4"
                 on_press: root.calculate_bmi()
                 on_press: root.add(4)
+                background_color: 107/255, 107/255, 107/255, 1
+                background_normal: ''
+                background_down: ''
+                on_press: self.background_color = (70/255, 70/255, 70/255, 1)
+                on_release: self.background_color = (107/255, 107/255, 107/255, 1)
+                font_size: (23.5)
+                font_name: 'SF-UI-Text-Regular.otf'
 
             Button:
                 text: "5"
                 on_press: root.calculate_bmi()
                 on_press: root.add(5)
+                background_color: 107/255, 107/255, 107/255, 1
+                background_normal: ''
+                background_down: ''
+                on_press: self.background_color = (70/255, 70/255, 70/255, 1)
+                on_release: self.background_color = (107/255, 107/255, 107/255, 1)
+                font_size: (23.5)
+                font_name: 'SF-UI-Text-Regular.otf'
 
             Button:
                 text: "6"
                 on_press: root.calculate_bmi()
                 on_press: root.add(6)
+                background_color: 107/255, 107/255, 107/255, 1
+                background_normal: ''
+                background_down: ''
+                on_press: self.background_color = (70/255, 70/255, 70/255, 1)
+                on_release: self.background_color = (107/255, 107/255, 107/255, 1)
+                font_size: (23.5)
+                font_name: 'SF-UI-Text-Regular.otf'
 
             Button:
                 text: "7"
                 on_press: root.calculate_bmi()
                 on_press: root.add(7)
+                background_color: 107/255, 107/255, 107/255, 1
+                background_normal: ''
+                background_down: ''
+                on_press: self.background_color = (70/255, 70/255, 70/255, 1)
+                on_release: self.background_color = (107/255, 107/255, 107/255, 1)
+                font_size: (23.5)
+                font_name: 'SF-UI-Text-Regular.otf'
 
             Button:
                 text: "8"
                 on_press: root.calculate_bmi()
                 on_press: root.add(8)
+                background_color: 107/255, 107/255, 107/255, 1
+                background_normal: ''
+                background_down: ''
+                on_press: self.background_color = (70/255, 70/255, 70/255, 1)
+                on_release: self.background_color = (107/255, 107/255, 107/255, 1)
+                font_size: (23.5)
+                font_name: 'SF-UI-Text-Regular.otf'
 
             Button:
                 text: "9"
                 on_press: root.calculate_bmi()
                 on_press: root.add(9)
+                background_color: 107/255, 107/255, 107/255, 1
+                background_normal: ''
+                background_down: ''
+                on_press: self.background_color = (70/255, 70/255, 70/255, 1)
+                on_release: self.background_color = (107/255, 107/255, 107/255, 1)
+                font_size: (23.5)
+                font_name: 'SF-UI-Text-Regular.otf'
 
             Button:
                 text: "."
                 on_press: root.calculate_bmi()
                 on_press: root.add(".")
+                background_color: 70/255, 70/255, 70/255, 1
+                background_normal: ''
+                background_down: ''
+                on_press: self.background_color = (34/255, 34/255, 34/255, 1)
+                on_release: self.background_color = (70/255, 70/255, 70/255, 1)
+                font_size: (23.5)
+                font_name: 'SF-UI-Text-Regular.otf'
 
             Button:
                 text: "0"
                 on_press: root.calculate_bmi()
                 on_press: root.add(0)
+                background_color: 107/255, 107/255, 107/255, 1
+                background_normal: ''
+                background_down: ''
+                on_press: self.background_color = (70/255, 70/255, 70/255, 1)
+                on_release: self.background_color = (107/255, 107/255, 107/255, 1)
+                font_size: (23.5)
+                font_name: 'SF-UI-Text-Regular.otf'
 
             Button:
-                text: "back"
+                text: 'delete'
+                on_press: root.calculate_bmi()
+                on_press: root.delete_text()
+                background_color: 70/255, 70/255, 70/255, 1
+                background_normal: ''
+                background_down: ''
+                on_press: self.background_color = (34/255, 34/255, 34/255, 1)
+                on_release: self.background_color = (70/255, 70/255, 70/255, 1)
+                font_size: (23.5)
+                font_name: 'SF-UI-Text-Regular.otf'
 
 
 
@@ -310,7 +503,7 @@ WindowManager:
         #    pos_hint: {"top": .8, "x":1}
             canvas.before:
                 Color:
-                    rgb: 0, .5, .5, 1
+                    rgb: 43/255, 43/255, 43/255, 1
                 Rectangle:
                     size: self.size
                     pos: self.pos
